--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,3 +1,7 @@
 extensions:
     - PhpSpec\NyanFormattersExtension\Extension
+    - PhpSpec\Extension\CodeCoverageExtension
 formatter.name: nyan.crab
+code_coverage:
+    blacklist:
+        - src/CWSpear/SchemaDefinition/Console
