--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "symfony/console": "~2.6",
         "symfony/filesystem": "~2.6",
-        "symfony/yaml": "~2.6"
+        "symfony/yaml": "~2.6",
+        "doctrine/dbal": "~2.5"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1",
